# Financial-Statement-Fraud-Detection-System-Using-Machine-Learning

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy_api.yml  train_pipeline.yml
api/: __init__.py  main.py  schemas.py  services.py
data/: data_description.md
deploy/: Dockerfile  docker-compose.yml  serve_model.sh
notebooks/: 00_data_collection.ipynb  00_preparing_data.ipynb  01_data_preprocessing.ipynb  01_preprocessing.ipynb  02_eda.ipynb  02_exploratory_data_analysis.ipynb  03_feature_engineering.ipynb  03_feature_selection.ipynb  04_model_training.ipynb  04_modeling.ipynb  05_model_evaluation.ipynb
report/: eda_sumary.md
scripts/: 00_download_data.py  01_preprocess_data.py  02_feature_engineering.py  03_train_model.py  04_evaluate_model.py  run_pipeline.py  start_api.py  test_api.py
src/: __init__.py  config.py  data.py  evaluate.py  features.py  pipeline.py  preprocessing.py  train.py
tests/: test_api.py  test_data.py  test_model.py
